--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "npm run start:shell",
-    "start:shell": "ng serve shell  -o --port 5000",
+    "start:shell": "ng serve shell  -o --port 4000",
     "start:mfe1": "ng serve mfe1 -o --port 3000",
     "start:all": "concurrently \"npm run start:shell\" \"npm run start:mfe1\" ",
     "build:shell": "ng build shell --prod",
@@ -13,7 +13,8 @@
     "build": "npm run build:shell && npm run build:mfe1",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "run:all": "node node_modules/@angular-architects/module-federation/src/server/mf-dev-server.js"
   },
   "private": true,
   "dependencies": {
@@ -41,18 +42,30 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
+    "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.9",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "ngx-build-plus": "^14.0.0",
     "protractor": "~7.0.0",
     "serve": "^11.3.2",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.7.3"
-  }
+  },
+  "description": "",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/p4nduxcv/Micro-Frontend-Starter.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/p4nduxcv/Micro-Frontend-Starter/issues"
+  },
+  "homepage": "https://github.com/p4nduxcv/Micro-Frontend-Starter#readme"
 }
